# DZ8Web

DZ1/: app.py  config.py  load_data.py  models.py  pyproject.toml
DZ2/: consumer.py  docker-compose.yml  models.py  producer.py  pyproject.toml
