[tool.poetry]
name = "dz8"
version = "0.1.0"
description = ""
authors = ["Andron1992 <nagola2112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongo = "^0.2.0"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
